--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "qwerty",
-    "slug": "qwerty",
+    "name": "onlineVidalaya",
+    "slug": "onlineVidalaya",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -16,11 +16,13 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true
-    },
+
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "android": {
+      "package": "com.amritpratya.onlineVidalaya",
+      "googleServicesFile": "./google-services.json"
     }
   }
 }
