--- a/package.json
+++ b/package.json
@@ -9,11 +9,26 @@
   },
   "dependencies": {
     "expo": "~38.0.8",
+    "expo-image-picker": "~8.3.0",
+    "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
+    "firebase": "^7.9.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-animatable": "^1.3.3",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-screens": "~2.9.0",
+    "react-native-web": "~0.11.7",
+    "react-native-webview": "9.4.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.3.1",
+    "react-navigation-stack": "^1.10.3",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "rn-pdf-reader-js": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
